--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
         width: 100%;
         height: 100%;
       }
+      h1 {
+        color: white;
+        margin-top: 80px;
+        margin-left: 600px;
+        font-style: italic;
+      }
     </style>
   </head>
   <body>
+    <h1>Nguyễn Thị Ngọc Ánh</h1>
     <canvas id="pinkboard"></canvas>
     <script>
       /*
